--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "marked": "^13.0.0",
+    "node-fetch": "^3.3.2",
+    "node-sd-webui": "^0.0.8",
     "openai": "^4.50.0",
     "replicate": "^0.30.2"
   }
