--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-fetch": "^3.3.2",
     "node-sd-webui": "^0.0.8",
     "openai": "^4.50.0",
-    "replicate": "^0.30.2"
+    "replicate": "^0.30.2",
+    "ws": "^8.17.1"
   }
 }
